--- a/configuration-service/app/src/main/resources/application.properties
+++ b/configuration-service/app/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8090
 server.file.repository=E://0//data//
 server.file.temp=E://0//temp//
 server.digest.algorithm=SHA-512
-
+server.file.mediaType=application/octet-stream
 
 #
 # Spring file upload limits
