--- a/integration-layer-dsl-api/il-anon/pom.xml
+++ b/integration-layer-dsl-api/il-anon/pom.xml
@@ -11,10 +11,16 @@
 
 	<groupId>com.intrasoft.csp</groupId>
     <artifactId>il-anon</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.intrasoft.csp</groupId>
+			<artifactId>il-commons</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -65,14 +71,16 @@
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>bootstrap-fileinput</artifactId>
-			<version>4.2.0</version>
+			<version>4.4.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.9</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -87,11 +95,6 @@
 			<version>42.1.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.intrasoft.csp</groupId>
-			<artifactId>il-commons</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
-		</dependency>
 	</dependencies>
 
 	<build>
