--- a/integration-layer-dsl-api/il-commons/pom.xml
+++ b/integration-layer-dsl-api/il-commons/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
             <version>${spring.retry.version}</version>
