--- a/integration-layer-dsl-api/il-anon/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-anon/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
 # JPA / HIBERNATE
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 # Naming strategy
