--- a/integration-layer-dsl-api/il-anon/pom.xml
+++ b/integration-layer-dsl-api/il-anon/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>il-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>com.intrasoft.csp</groupId>
+            <artifactId>il-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -104,7 +109,6 @@
 			<artifactId>webjars-locator</artifactId>
 			<version>0.32-1</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
