--- a/integration-layer-dsl-api/integration-tests/pom.xml
+++ b/integration-layer-dsl-api/integration-tests/pom.xml
@@ -17,14 +17,10 @@
     <name>Integration Tests</name>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-web</artifactId>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
