--- a/integration-layer-dsl-api/il-client/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-client/src/main/resources/application.properties
@@ -16,3 +16,7 @@ tc.host = localhost
 tc.port = 8081
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
+
+anon.protocol = http
+anon.host = localhost
+anon.port:8085
