--- a/integration-layer-dsl-api/il-anon/pom.xml
+++ b/integration-layer-dsl-api/il-anon/pom.xml
@@ -110,6 +110,11 @@
 			<version>42.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
