--- a/configuration-service/app/src/main/resources/application.properties
+++ b/configuration-service/app/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 #
 # Generic application configuration
 #
+spring.application.name=CSP.CCS
 server.port=8090
 server.file.repository=E://0//data//
 server.file.temp=E://0//temp//
 server.digest.algorithm=SHA-512
 server.file.mediaType=application/octet-stream
 
+
+#
+#  Logging
+#
+# See logback.xml in resources
+#
+
+
 #
 # Spring file upload limits
 #
 spring.http.multipart.maxFileSize=512MB
 spring.http.multipart.maxRequestSize=512MB
-#spring.http.multipart.max-file-size=128MB
-#spring.http.multipart.max-request-size=128MB
 
 
 #
@@ -33,10 +40,9 @@ spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 
 
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
-
-
-# Allow Thymeleaf templates to be reloaded at dev time
+#
+# Thymeleaf: Allow Thymeleaf templates to be reloaded at dev time
+#
 spring.thymeleaf.cache=false
 server.tomcat.access_log_enabled=true
 server.tomcat.basedir=target/tomcat
