fixes on anon/pseudo functionality

--- a/integration-layer-dsl-api/il-anon/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-anon/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
+#logging.level.org.springframework.web=DEBUG
+
 # JPA / HIBERNATE
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
