--- a/integration-layer-dsl-api/il-anon/src/main/resources/application-mysql.properties
+++ b/integration-layer-dsl-api/il-anon/src/main/resources/application-mysql.properties
@@ -2,14 +2,14 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/csp_anon_${user.name}
 spring.datasource.username=csp
 spring.datasource.password=csp
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
 # JPA / HIBERNATE
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
