mapping controller and ui fixes

--- a/integration-layer-dsl-api/il-anon/pom.xml
+++ b/integration-layer-dsl-api/il-anon/pom.xml
@@ -120,8 +120,18 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.2.2.RELEASE</version>
+        </dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
