--- a/configuration-service/csp-ccs/ccs-server/pom.xml
+++ b/configuration-service/csp-ccs/ccs-server/pom.xml
@@ -16,18 +16,23 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- Compile -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.intrasoft.csp.ccs</groupId>
+            <artifactId>ccs-commons</artifactId>
+            <version>${project.version}</version>
         </dependency>
+        <!--&lt;!&ndash; Compile &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-web</artifactId>-->
+        <!--</dependency>-->
 
-        <!-- Test -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <!--&lt;!&ndash; Test &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-test</artifactId>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
         <dependency>
