--- a/configuration-service/csp-ccs/pom.xml
+++ b/configuration-service/csp-ccs/pom.xml
@@ -33,6 +33,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring.boot.version>1.5.2.RELEASE</spring.boot.version>
+        <spring.retry.version>1.1.2.RELEASE</spring.retry.version>
     </properties>
 
     <build>
