Fix application properties for internal,external keystore pass, on docker profile

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
@@ -32,12 +32,12 @@ consume.errorq.message.consumption.delay = 300
 internal.use.ssl = true
 internal.ssl.endpoint.protocol = https4-in
 internal.ssl.keystore.resource = /opt/ssl/server/csp-internal.jks
-internal.ssl.keystore.passphrase = 123456
+internal.ssl.keystore.passphrase = <tbd>
 
 external.use.ssl = true
 external.ssl.endpoint.protocol = https4-ex
 external.ssl.keystore.resource = /opt/ssl/server/csp-external.jks
-external.ssl.keystore.passphrase = 123456
+external.ssl.keystore.passphrase = <tbd>
 
 # ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
