--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -10,6 +10,9 @@ server.ssl.key-store-password=${IL_SSL_KEYSTORE_PASS}
 server.ssl.key-password=${IL_SSL_KEY_PASS}
 server.subdomain.prefix = ${IL_CSP_SUBDOMAIN_PREFIX}
 
+internal.ssl.keystore.passphrase = ${IL_SSL_KEYSTORE_PASS}
+external.ssl.keystore.passphrase = ${IL_SSL_KEYSTORE_PASS}
+
 #obsolete for production - use activemq broker
 embedded.activemq.data.path = /opt/data/activemq
 
