Libraries for versioning and restclient - major refactoring

--- a/integration-layer-dsl-api/il-anonymization/anon-commons/pom.xml
+++ b/integration-layer-dsl-api/il-anonymization/anon-commons/pom.xml
@@ -3,38 +3,39 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.intrasoft.csp</groupId>
-        <artifactId>parent-pom</artifactId>
+        <artifactId>il-anonymization</artifactId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
+
+    <name>Anonymization Commons</name>
     <groupId>com.intrasoft.csp</groupId>
-    <artifactId>il-client</artifactId>
+    <artifactId>anon-commons</artifactId>
     <version>0.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+
     <dependencies>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.intrasoft.csp</groupId>
-            <artifactId>il-commons</artifactId>
+            <artifactId>libraries-versioning</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
     </dependencies>
+
 
 </project>
