--- a/integration-layer-dsl-api/libraries/restclient/pom.xml
+++ b/integration-layer-dsl-api/libraries/restclient/pom.xml
@@ -3,38 +3,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.intrasoft.csp</groupId>
-        <artifactId>parent-pom</artifactId>
+        <artifactId>libraries</artifactId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
+
+    <name>Rest Client</name>
     <groupId>com.intrasoft.csp</groupId>
-    <artifactId>il-client</artifactId>
+    <artifactId>libraries-restclient</artifactId>
     <version>0.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+
     <dependencies>
         <dependency>
-            <groupId>com.intrasoft.csp</groupId>
-            <artifactId>il-commons</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>${spring.retry.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
