--- a/integration-layer-dsl-api/integration-tests/pom.xml
+++ b/integration-layer-dsl-api/integration-tests/pom.xml
@@ -34,6 +34,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.intrasoft.csp</groupId>
+            <artifactId>il-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-test-spring</artifactId>
             <version>${camel.version}</version>
