Remover boilerplate code/refactoring

--- a/integration-layer-dsl-api/il-anonymization/anon-commons/pom.xml
+++ b/integration-layer-dsl-api/il-anonymization/anon-commons/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>libraries-versioning</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.intrasoft.csp</groupId>
+            <artifactId>il-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
