ANONYMIZATION: make default profile to use H2 db in file. Refactor additional profiles to support mysql, h2 in memory and PostgreS.

--- a/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application-postgres.properties
+++ b/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application-postgres.properties
@@ -1,5 +1,8 @@
+# DATA SOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/anonymization
 spring.datasource.username=anon
 spring.datasource.password=@n0nu$er
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / HIBERNATE
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
