--- a/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application.properties
@@ -1,16 +1,21 @@
+# SERVER
+server.port=8585
+h2.db.file = /opt/csp/anonymization/anon_db
+
 # DATA SOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/anonymization
-spring.datasource.username=anon
-spring.datasource.password=@n0nu$er
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:h2:mem:anon;
+spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-
-#logging.level.org.springframework.web=DEBUG
 
 # JPA / HIBERNATE
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
@@ -26,10 +31,6 @@ server.error.whitelabel.enabled=false
 spring.http.multipart.max-file-size=2048KB
 spring.http.multipart.max-request-size=2048KB
 
-# SERVER
-server.port=8585
-
 key.update=10000
 
-spring.messages.basename=i18n/messages
 
