CCS: Add more profiles for hibernate support of h2(file+mem), mysql, postgres

--- a/integration-layer-dsl-api/pom.xml
+++ b/integration-layer-dsl-api/pom.xml
@@ -23,6 +23,7 @@
 		<module>il-client</module>
 		<module>integration-tests</module>
 		<module>il-anonymization</module>
+		<module>il-configuration</module>
 		<module>libraries</module>
 	</modules>
 
