--- a/integration-layer-dsl-api/il-configuration/conf-server/pom.xml
+++ b/integration-layer-dsl-api/il-configuration/conf-server/pom.xml
@@ -23,6 +23,15 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
