--- a/integration-layer-dsl-api/il-configuration/conf-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-configuration/conf-server/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.file.repository=E://0//data//
 server.file.temp=E://0//temp//
 server.digest.algorithm=SHA-512
 server.file.mediaType=application/octet-stream
-
+h2.db.file = /opt/csp/configuration/conf_db
 
 #
 #  Logging
@@ -23,21 +23,33 @@ spring.http.multipart.maxFileSize=512MB
 spring.http.multipart.maxRequestSize=512MB
 
 
-#
+
 # Spring database configuration
-#
-spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=false
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.platform=postgres
-spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://db.netbit.gr:61821/cspccs
-spring.datasource.url=jdbc:postgresql://localhost:5432/cspccs
-spring.datasource.username=csp
-spring.datasource.password=QdkcIdtg27tAYoX1JXSC
+
+spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.testOnBorrow=true
+spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
+
+
+# JPA / HIBERNATE
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+# Naming strategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+
+
+
+
+
+
 
 
 #
