--- a/integration-layer-dsl-api/il-anonymization/anon-server/pom.xml
+++ b/integration-layer-dsl-api/il-anonymization/anon-server/pom.xml
@@ -74,11 +74,11 @@
             <version>1.9.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>bootstrap-fileinput</artifactId>
-            <version>4.4.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.webjars.bower</groupId>-->
+            <!--<artifactId>bootstrap-fileinput</artifactId>-->
+            <!--<version>4.4.0</version>-->
+        <!--</dependency>-->
 
 
         <dependency>
