--- a/integration-layer-dsl-api/libraries/restclient/pom.xml
+++ b/integration-layer-dsl-api/libraries/restclient/pom.xml
@@ -24,6 +24,10 @@
             <version>${spring.retry.version}</version>
         </dependency>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
