anon tests with h2:mem profile

--- a/integration-layer-dsl-api/il-anonymization/anon-server/pom.xml
+++ b/integration-layer-dsl-api/il-anonymization/anon-server/pom.xml
@@ -117,6 +117,17 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
