--- a/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application-h2mem.properties
+++ b/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application-h2mem.properties
@@ -4,6 +4,16 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
+#   H2 Settings
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+
+# Flyway
+flyway.locations=db/h2
+
 # JPA / HIBERNATE
 spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
