--- a/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application-postgres.properties
+++ b/integration-layer-dsl-api/il-anonymization/anon-server/src/main/resources/application-postgres.properties
@@ -4,5 +4,8 @@ spring.datasource.username=anon
 spring.datasource.password=@n0nu$er
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# FLYWAY
+flyway.baselineOnMigrate=true
+
 # JPA / HIBERNATE
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
