SXCSP-85: Adding basic files for policy handler module + unit test

--- a/csp-apps/integration-layer/il-server/pom.xml
+++ b/csp-apps/integration-layer/il-server/pom.xml
@@ -98,8 +98,18 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test-spring</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.intrasoft.csp</groupId>-->
+            <!--<artifactId>il-client</artifactId>-->
+            <!--<version>${project.version}</version>-->
+        <!--</dependency>-->
+        <dependency>
             <groupId>com.intrasoft.csp</groupId>
-            <artifactId>il-client</artifactId>
+            <artifactId>anon-client</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
