SXCSP-85:  SharingPolicy service implementation and unit tests

--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -141,3 +141,23 @@ rt.path = /adapter/rt
 
 # Devel
 enableElastic = true
+
+# ----------------------------------------
+# Sharing Policy Hibernate Properties
+# ----------------------------------------
+
+h2.db.file = /opt/csp/sharing_policy/policy_db
+
+# DATA SOURCE
+spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+# JPA / HIBERNATE
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
