Disable flyway in anon-module default profile

--- a/csp-apps/anonymization/anon-server/src/main/resources/application.properties
+++ b/csp-apps/anonymization/anon-server/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 server.port=8585
 h2.db.file = /opt/csp/anonymization/anon_db
 
+#FLYWAY
+flyway.enabled=false
+
 # DATA SOURCE
 #spring.datasource.url=jdbc:h2:mem:anon;
 spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE
