SXCSP-85: Adding thymeleaf and first pages

--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -161,3 +161,5 @@ spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+security.basic.enabled=false
