initial commit for SXCSP-261

--- a/csp-apps/configuration/pom.xml
+++ b/csp-apps/configuration/pom.xml
@@ -21,6 +21,7 @@
         <module>conf-commons</module>
         <module>conf-server</module>
         <module>conf-integration-tests</module>
+	<module>conf-client-cspapp</module>
     </modules>
 
 
