Fixing conf-server application properties

--- a/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
@@ -2,9 +2,9 @@
 # Generic application configuration
 #
 spring.application.name=CSP.CCS
-server.port=${CONF_DOCR_PORT}
-server.file.repository=${CONF_REPO}/data/
-server.file.temp=${CONF_REPO}/temp/
+server.port=${CFG_DOCR_PORT}
+server.file.repository=${CFG_PATH_REPO}/data/
+server.file.temp=${CFG_PATH_REPO}/temp/
 server.digest.algorithm=SHA-512
 server.file.mediaType=application/octet-stream
 
@@ -24,9 +24,9 @@ spring.http.multipart.maxRequestSize=512MB
 
 
 # DATA SOURCE
-spring.datasource.url=jdbc:postgresql://csp-postgres:5432/cspccs
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://csp-postgres:${POSTGRES_DOCR_PORT}/${POSTGRES_DB_CFG}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / HIBERNATE
