--- a/csp-apps/anonymization/anon-server/src/main/resources/application-docker.properties
+++ b/csp-apps/anonymization/anon-server/src/main/resources/application-docker.properties
@@ -1,10 +1,11 @@
 server.port = ${ANON_DOCR_PORT}
 
 # DATA SOURCE
-spring.datasource.url=jdbc:postgresql://csp-postgres:5432/anonymizationdb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+# DATA SOURCE
+spring.datasource.url=jdbc:h2:mem:anon;
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # FLYWAY
 flyway.baselineOnMigrate=true
