--- a/csp-apps/anonymization/anon-server/src/main/resources/application-docker.properties
+++ b/csp-apps/anonymization/anon-server/src/main/resources/application-docker.properties
@@ -2,7 +2,7 @@ server.port = ${ANON_DOCR_PORT}
 
 # DATA SOURCE
 # DATA SOURCE
-spring.datasource.url=jdbc:h2:mem:anon;
+spring.datasource.url=jdbc:h2:file:/opt/anon/data/anondb;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
