SXCSP-85: Add migration support using flywaydb and policy manager should not kick in when dataType is TRUSTCIRCLE

--- a/csp-apps/integration-layer/il-server/pom.xml
+++ b/csp-apps/integration-layer/il-server/pom.xml
@@ -39,6 +39,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!--Flyway db-->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.2.0</version>
+        </dependency>
         <!--Thymeleaf-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
