--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -148,6 +148,13 @@ enableElastic = true
 
 h2.db.file = /opt/csp/sharing_policy/policy_db
 
+# ----------------------------------------
+# Flyway Configuration
+# ----------------------------------------
+
+flyway.enabled = true
+flyway.table = schema_history
+
 # DATA SOURCE
 spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
