--- a/csp-apps/configuration/conf-server/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.file.temp=E://0//temp//
 server.digest.algorithm=SHA-512
 server.file.mediaType=application/octet-stream
 #h2.db.file = /opt/csp/configuration/conf_db
-h2.db.file = E://0//conf_db
+h2.db.file = E://0//h2-tests
 
 #
 #  Logging
