--- a/csp-apps/configuration/conf-server/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application.properties
@@ -3,12 +3,12 @@
 #
 spring.application.name=CSP.CCS
 server.port=8090
-server.file.repository=E://0//data//
-server.file.temp=E://0//temp//
+server.file.repository=E:\\0\\data\\
+server.file.temp=E:\\0\\temp\\
 server.digest.algorithm=SHA-512
 server.file.mediaType=application/octet-stream
 #h2.db.file = /opt/csp/configuration/conf_db
-h2.db.file = E://0//h2-tests
+h2.db.file = E:\\0\\h2-tests
 
 #
 #  Logging
