--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -7,3 +7,21 @@ spring.datasource.url=jdbc:h2:file:e://0//persistence;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+
+# CLIENT UI
+client.ui.jiralink=https://jira.intrasoft-intl.com/
+client.ui.statusInterval=1000
+client.ui.refreshInterval=60000
+
+# CONF SERVER
+conf.client.ssl.enabled = false
+conf.client.ssl.jks.keystore = classpath:cps-internal.jks
+conf.client.ssl.jks.keystore.password = 123456
+
+conf.server.protocol = http
+conf.server.host = localhost
+conf.server.port = 8090
+
+conf.retry.backOffPeriod = 5000
+conf.retry.maxAttempts = 3
