--- a/csp-apps/configuration/conf-server/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application.properties
@@ -3,14 +3,14 @@
 #
 spring.application.name=CSP.CCS
 server.port=8090
-server.file.repository=E://0//data//
-server.file.temp=E://0//temp//
+server.file.repository=/tmp/repo/data/
+server.file.temp=/tmp/repo/temp/
 server.digest.algorithm=SHA-512
 server.file.mediaType=application/octet-stream
-server.manifest=MANIFEST.json
+#as per the docker module document, it is 'manifest.json' no uppercase
+server.manifest=manifest.json
 #h2.db.file = /opt/csp/configuration/conf_db
-h2.db.file = e://0//h2-tests
-
+h2.db.file=/opt/csp/configuration/conf_db
 
 #
 #  Logging
