--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-#spring.datasource.url=jdbc:h2:file:/etc/cspinst/persistence;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:file:e://0//persistence;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:/etc/cspinst/persistence:confdb;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:file:e://0//persistence;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
