updated so h2 persists instead of drop by default

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -2,12 +2,13 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-spring.datasource.url=jdbc:h2:file:/etc/cspinst/persistence:confdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:/tmp/clientconf;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.url=jdbc:h2:file:e://0//persistence;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-
+# default is create-drop :D
+spring.jpa.hibernate.ddl-auto=update
 
 # CLIENT UI
 client.ui.jiralink=https://jira.intrasoft-intl.com/
@@ -23,5 +24,10 @@ conf.server.protocol = http
 conf.server.host = localhost
 conf.server.port = 8090
 
-conf.retry.backOffPeriod = 5000
+conf.retry.backOffPeriod = 15000
 conf.retry.maxAttempts = 3
+
+installation.temp.directory=/tmp
+# this should become /opt/csp/modules
+installation.modules.directory=/opt/csp/modules
+
