--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -162,7 +162,12 @@
 			<artifactId>easy-pie-chart</artifactId>
 			<version>2.1.6</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/bootstrap-fileinput -->
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>bootstrap-fileinput</artifactId>
+			<version>4.4.0</version>
+		</dependency>
 		<!-- Joda -->
 		<dependency>
 			<groupId>joda-time</groupId>
