Add new env variables for anon server (commented out at the moment)

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -16,6 +16,14 @@ external.ssl.keystore.passphrase = ${IL_SSL_KEYSTORE_PASS}
 #obsolete for production - use activemq broker
 embedded.activemq.data.path = /opt/data/activemq
 
+
+# ----------------------------------------
+# ANONYMIZATION client properties
+# ----------------------------------------
+
+#anon.client.ssl.jks.keystore.password = ${ANON_CLIENT_SSL_KEYSTORE_PASS}
+#anon.server.host = ${ANON_SERVER_HOST}
+
 # ----------------------------------------
 # CSP Application data type flows
 # ----------------------------------------
