--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -60,6 +60,18 @@ activemq.max.redelivery.attempts = 5
 
 
 # ----------------------------------------
+# ANONYMIZATION client properties
+# ----------------------------------------
+
+anon.client.ssl.enabled = false
+anon.client.ssl.jks.keystore = classpath:cps-internal.jks
+anon.client.ssl.jks.keystore.password = 123456
+
+anon.server.protocol = http
+anon.server.host = localhost
+anon.server.port:8085
+
+# ----------------------------------------
 # CSP Application data type flows
 # ----------------------------------------
 
