--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
@@ -40,6 +40,18 @@ external.ssl.keystore.resource = /opt/ssl/server/csp-external.jks
 external.ssl.keystore.passphrase = <tbd>
 
 # ----------------------------------------
+# ANONYMIZATION client properties
+# ----------------------------------------
+
+#anon.client.ssl.enabled = true
+#anon.client.ssl.jks.keystore = /opt/ssl/server/csp-internal.jks
+#anon.client.ssl.jks.keystore.password = 123456
+#
+#anon.server.protocol = https
+#anon.server.host = csp-anon
+#anon.server.port:443
+
+# ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
 # ----------------------------------------
 
