updated and now install is done - todo's show remaining work

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-#spring.datasource.url=jdbc:h2:file:/tmp/clientconf;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:file:e://0//persistence;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:/tmp/clientconf;DB_CLOSE_ON_EXIT=FALSE;COMPRESS=TRUE
+#spring.datasource.url=jdbc:h2:file:e://0//persistence;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -31,3 +31,10 @@ installation.temp.directory=/tmp
 # this should become /opt/csp/modules
 installation.modules.directory=/opt/csp/modules
 
+
+
+## flyway (initialization for db logging
+flyway.enabled=true
+flyway.check-location=true
+flyway.baseline-on-migrate=true
+flyway.locations[0]=classpath:db/migration
